traces/bug_66.txt
examples++-load/MetricKuate.cpp:289: error: DEAD_STORE
  The value written to &condition (type int) is never used.
Showing all 1 steps of the trace


examples++-load/MetricKuate.cpp:289:9: Write of unused value
287.   	       {
288.   		 if(Li<0) condition =0;
289.   		 else condition =1;
               ^
290.   	       }
291.   	     
